Android emulator working with Java 17